fix: recursively list objects